--- a/StimSD/src/main/webapp/VistaOndas.xhtml
+++ b/StimSD/src/main/webapp/VistaOndas.xhtml
@@ -247,7 +247,7 @@
 						</b:container> 			
 					</p:dialog>
 <!-- Crear o medificar Parametros -->
-			<p:dialog header="Parametros" widgetVar="paParametros" showEffect="explode" hideEffect="bounce" height="100"  modal="true" >
+			<p:dialog header="Parámetros" widgetVar="paParametros" showEffect="explode" hideEffect="bounce" height="100"  modal="true" >
 				 	 <b:container fluid="true">
 				 	 	<b:row  style="margin-bottom:25px" >
 				 	 		<b:column span="2">
@@ -263,7 +263,7 @@
 				 	 </b:container>
 			</p:dialog>
 <!-- ver parametros -->	
- 			<p:dialog header="Parametros" widgetVar="paParametrosver" showEffect="explode" hideEffect="bounce" height="300"  modal="true" >
+ 			<p:dialog header="Parámetros" widgetVar="paParametrosver" showEffect="explode" hideEffect="bounce" height="300"  modal="true" >
  				<b:panelGrid  columns="2" >
  				<b:container fluid="true">
  						<b:row  style="margin-bottom:10px" >
