--- a/StimSD/src/main/webapp/login.xhtml
+++ b/StimSD/src/main/webapp/login.xhtml
@@ -26,7 +26,7 @@
 <h:outputLabel id = "R" value="#{login.resultado}" />
 <b:container>
 <h:form   id="loginForm" >
-   <h2 style="text-align: center">Inicio de Sesion</h2>
+   <h2 style="text-align: center">Inicio de Sesión</h2>
    <br></br><br />
    
 <b:container fluid="true">
@@ -62,15 +62,15 @@
       </b:row>
        
       <b:row>
-        <b:column offset="1" span="4" style="margin-bottom:20px">
-          <b:commandButton value="Login"  look="primary" style="width:100%" id="loginButton"
-             actionListener="#{login.ingresa}" update=":R"
-             onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()" />
-        </b:column>
           <b:column offset="1" span="4" style="margin-bottom:20px">
           <b:commandButton value="Registro" look="danger" style="width:100%"
           actionListener="#{login.ini_registro}" 
        	  onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()" />
+        </b:column>
+        <b:column offset="1" span="4" style="margin-bottom:20px">
+          <b:commandButton value="Login"  look="primary" style="width:100%" id="loginButton"
+             actionListener="#{login.ingresa}" update=":R"
+             onclick="PF('statusDialog').show()"  oncomplete="PF('statusDialog').hide()" />
         </b:column>
       </b:row>
       </b:panel>
