--- a/StimSD/src/main/webapp/estimulador.xhtml
+++ b/StimSD/src/main/webapp/estimulador.xhtml
@@ -793,8 +793,8 @@
                             </b:inputText>                  
                         </b:column>
                         </b:row>
-                        <b:column offset="4" span="8" style="margin-top:20px">
-                        <b:commandButton look="success"   value="ok" listener="#{pacienteView.guarda_actualiza_datos}" ></b:commandButton>
+                        <b:column offset="4" span="8" style="margin-top:20px"> 
+                        <b:commandButton look="success"   value="ok" actionlistener="#{pacienteView.guarda_actualiza_datos}" ></b:commandButton>
                         </b:column>
 						
  					</b:container>
