--- a/StimSD/src/main/webapp/pacientes.xhtml
+++ b/StimSD/src/main/webapp/pacientes.xhtml
@@ -125,6 +125,9 @@
 <h:body style= "background-color: #ecf2f5">
 <h:form   id = "form_g_p">
  <!-- zuri inicio -->
+ <c:if  test="#{pacienteView.tipos_vistas == 4}"> <!--  historico -->
+ 
+ </c:if>
 <c:if  test="#{pacienteView.tipos_vistas == 3}">
 
                     <b:panelGrid  columns="2" >
