--- a/Proyecto-master 22/StimSD/src/main/webapp/hospitales.xhtml
+++ b/Proyecto-master 22/StimSD/src/main/webapp/hospitales.xhtml
@@ -157,6 +157,10 @@
                          value="Exportar a PDF"
                          onclick="return downloadImage();"
                          type="Submit" />
+                         <h:commandButton id="descargar" styleClass="btn btn-primary"
+                         value="Exportar a PDF"
+                         onclick="return downloadImage();"
+                         type="Submit" />
 					</b:row>
 					</h:form>
 					</b:container>
